# tarantool-luajit

./: .codespell-ignore-words.txt  .gitignore  .luacheckrc  CMakeLists.txt  Makefile  Makefile.original
cmake/: LuaJITUtils.cmake  MakeLuaPath.cmake  SetDynASMFlags.cmake  SetTargetFlags.cmake  SetVersion.cmake
test/: CMakeLists.txt  fix_string_find_recording.test.lua  fold_bug_LuaJIT_505.test.lua  fold_bug_LuaJIT_524.test.lua  gh-3196-incorrect-string-length.test.lua  gh-4427-ffi-sandwich.test.lua  gh-4476-fix-string-find-recording.test.lua  gh-4773-tonumber-fail-on-NUL-char.test.lua  lj-494-table-chain-infinite-loop.test.lua  lj-524-fold-conv-respect-src-irt.test.lua  lj-flush-on-trace.test.lua  luajit-test-init.lua  misclib-getmetrics-capi.test.lua  misclib-getmetrics-lapi.test.lua  misclib-memprof-lapi.test.lua  mmpairs_test.lua  or-232-unsink-64-kptr.test.lua  suite.ini  utils.lua
test/LuaJIT-tests/: CMakeLists.txt  test.lua
test/LuaJIT-tests/lang/: index
test/LuaJIT-tests/lib/: contents.lua
test/LuaJIT-tests/lib/ffi/: index
test/LuaJIT-tests/src/: CMakeLists.txt  ctest.c  libctest.c
test/PUC-Rio-Lua-5.1-tests/: CMakeLists.txt  api.lua  closure.lua  constructs.lua  db.lua  errors.lua  gc.lua  main.lua  nextvar.lua  pm.lua  strings.lua
test/PUC-Rio-Lua-5.1-tests/libs/: CMakeLists.txt  lib1.c
test/gh-4427-ffi-sandwich/: CMakeLists.txt
test/lj-flush-on-trace/: CMakeLists.txt
test/lua-Harness-tests/: 090-tap.t  091-profile.t  101-boolean.t  102-function.t  103-nil.t  104-number.t  105-string.t  106-table.t  107-thread.t  108-userdata.t  200-examples.t  201-assign.t  202-expr.t  203-lexico.t  204-grammar.t  211-scope.t  212-function.t  213-closure.t  214-coroutine.t  221-table.t  222-constructor.t  223-iterator.t  231-metatable.t  232-object.t  241-standalone.t  241-standalone.t.disabled  242-luac.t  301-basic.t  303-package.t  304-string.t  305-utf8.t  306-table.t  307-math.t  308-io.t  309-os.t  310-debug.t  311-bit32.t  314-regex.t  320-stdin.t  401-bitop.t  (+9 more)
test/lua-Harness-tests/lexico53/: function.t  number.t  string.t  thread.t  userdata.t  utf8.t
test/lua-Harness-tests/lexico54/: lexico.t  metatable.t  utf8.t
test/lua-Harness-tests/lexicojit/: ext.t
test/misclib-getmetrics-capi/: CMakeLists.txt  testgetmetrics.c
test/tarantool-c-tests/: CMakeLists.txt  README.md  fix-yield-c-hook.test.c  gh-8594-sysprof-ffunc-crash.test.c  lj-49-bad-lightuserdata.test.c  lj-549-lua-load.test.c  lj-962-premature-stack-overflow.test.c  misclib-getmetrics-capi.test.c  misclib-sysprof-capi.test.c  test.c  test.h  unit-tap.test.c
test/tarantool-tests/: CMakeLists.txt  arm64-ccall-fp-convention.test.lua  bc-jit-unpatching.test.lua  c-library-path-length.test.lua  fix-binary-number-parsing.test.lua  fix-bit-shift-generation.test.lua  fix-cdata-concat.test.lua  fix-dangling-reference-to-ctype.test.lua  fix-emit-rma.test.lua  fix-fold-simplify-conv-sext.test.lua  fix-gc-setupvalue.test.lua  fix-jit-dump-ir-conv.test.lua  fix-mips64-spare-side-exit-patching.test.lua  fix-slot-check-for-mm-record.test.lua  fix-slots-overflow-for-varg-record.test.lua  gh-3196-incorrect-string-length.test.lua  gh-4199-gc64-fuse.test.lua  gh-4427-ffi-sandwich.test.lua  gh-4476-fix-string-find-recording.test.lua  gh-4773-tonumber-fail-on-NUL-char.test.lua  gh-5688-tool-cli-flag.test.lua  gh-5813-resolving-of-c-symbols.test.lua  gh-5994-memprof-human-readable.test.lua  gh-6065-jit-library-smoke-tests.test.lua  gh-6084-missed-carg1-in-bctsetr-fallback.test.lua  gh-6096-external-unwinding-on-arm64.test.lua  gh-6098-fix-side-exit-patching-on-arm64.test.lua  gh-6163-min-max.test.lua  gh-6189-cur_L.test.lua  gh-6227-bytecode-allocator-for-comparisons.test.lua  gh-6371-string-char-no-arg.test.lua  gh-6782-stitching-in-vmevent-handler.test.lua  gh-6976-narrowing-of-unary-minus.test.lua  gh-7264-add-proto-trace-sysprof-default.test.lua  gh-7745-oom-on-trace.test.lua  gh-8594-sysprof-ffunc-crash.test.lua  gh-9217-profile-parsers-error-handling.test.lua  lj-1004-oom-error-frame.test.lua  lj-1024-varg-maxslot.test.lua  lj-1034-tabov-error-frame.test.lua  (+75 more)
test/tarantool-tests/ffi-ccall/: CMakeLists.txt
test/tarantool-tests/fix-bit-shift-generation/: CMakeLists.txt
test/tarantool-tests/gh-4427-ffi-sandwich/: CMakeLists.txt
test/tarantool-tests/gh-5813-resolving-of-c-symbols/both/: CMakeLists.txt
test/tarantool-tests/gh-5813-resolving-of-c-symbols/gnuhash/: CMakeLists.txt
test/tarantool-tests/gh-5813-resolving-of-c-symbols/hash/: CMakeLists.txt
test/tarantool-tests/gh-5813-resolving-of-c-symbols/stripped/: CMakeLists.txt
test/tarantool-tests/gh-6098-fix-side-exit-patching-on-arm64/: CMakeLists.txt
test/tarantool-tests/gh-6189-cur_L/: CMakeLists.txt
test/tarantool-tests/lj-1004-oom-error-frame/: CMakeLists.txt
test/tarantool-tests/lj-1066-fix-cur_L-after-coroutine-resume/: CMakeLists.txt
test/tarantool-tests/lj-416-xor-before-jcc/: CMakeLists.txt
test/tarantool-tests/lj-49-bad-lightuserdata/: CMakeLists.txt  testlightuserdata.c
test/tarantool-tests/lj-549-bytecode-loader/: CMakeLists.txt
test/tarantool-tests/lj-551-bytecode-c-broken-macro/: CMakeLists.txt
test/tarantool-tests/lj-601-fix-gc-finderrfunc/: CMakeLists.txt
test/tarantool-tests/lj-727-lightuserdata-itern/: CMakeLists.txt
test/tarantool-tests/lj-802-panic-at-mcode-protfail/: CMakeLists.txt
test/tarantool-tests/lj-946-print-errors-from-gc-fin-default/: script.lua
test/tarantool-tests/lj-962-stack-overflow-report/: script.lua
test/tarantool-tests/lj-flush-on-trace/: CMakeLists.txt
test/tarantool-tests/misclib-getmetrics-capi/: CMakeLists.txt  testgetmetrics.c
test/tarantool-tests/misclib-sysprof-capi/: CMakeLists.txt  testsysprof.c
test/tarantool-tests/utils/: exec.lua  frontend.lua  tools.lua
test/tarantool-tests/utils/jit/: generators.lua  parse.lua
tools/: CMakeLists.txt  luajit-parse-memprof  luajit-parse-memprof.in  luajit-parse-sysprof.in  memprof.lua  sysprof.lua
tools/memprof/: humanize.lua  parse.lua  process.lua
tools/sysprof/: collapse.lua  parse.lua
tools/utils/: symtab.lua
(+130 files in other folders)
